AKS_Deployments/ServiceA.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea
spec:
  replicas: 3
  selector:
    matchLabels:
      app: servicea
  template:
    metadata:
      labels:
        app: servicea
    spec:
      containers:
      - name: servicea
        image: sbh556/servicea-bitcoin
        ports:
        - name: http
          containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: servicea-service
spec:
  selector:
    app: servicea
  ports:
  - name: "http"
    port: 80
    targetPort: 8080
