AKS_Deployments/ServiceB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: serviceb
  template:
    metadata:
      labels:
        app: serviceb
    spec:
      containers:
      - name: servicea
        image: sbh556/serviceb-bitcoin
        ports:
        - name: http
          containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: serviceb-service
spec:
  selector:
    app: serviceb
  ports:
  - name: "http"
    port: 80
    targetPort: 8080
